<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ksaitanya.agroaid.Home">

    <Button
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:id="@+id/about"
        android:onClick="AboutUs"
        android:background="@drawable/infoo"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/relativeLayout2" />
    <ImageButton
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:id="@+id/contact"
        android:onClick="ContactUs"
        android:background="@drawable/contact"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignEnd="@+id/relativeLayout2" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/about"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:id="@+id/relativeLayout2">

        <Button
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:text="@string/disease"
            android:id="@+id/disease"
            android:background="@drawable/disease"
                        android:gravity="bottom|center"
                        android:textColor="#ffffff"
                        android:paddingBottom="35dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/nutrient"
            android:layout_margin="1dp" />

        <Button
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:text="@string/nutrient"
            android:id="@+id/nutrient"
            android:textColor="#ffffff"
            android:background="@drawable/nutrient"
            android:gravity="bottom|center"
            android:paddingBottom="30dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_margin="1dp" />

        <Button
                        android:layout_width="165dp"
                        android:layout_height="165dp"
                        android:text="@string/pest"
                        android:background="@drawable/pest"
                        android:id="@+id/pest"
                        android:textColor="#ffffff"
                        android:gravity="bottom|center"
                        android:paddingBottom="35dp"
            android:layout_below="@+id/nutrient"
            android:layout_alignParentStart="true"
            android:layout_margin="1dp" />

        <Button
                        android:layout_width="165dp"
                        android:layout_height="165dp"
                        android:background="@drawable/info"
                        android:textColor="#ffffff"
                        android:id="@+id/info"
                        android:paddingBottom="35dp"
                        android:gravity="bottom|center"
                        android:text="@string/guide"
            android:layout_below="@+id/disease"
            android:layout_alignStart="@+id/disease"
            android:layout_margin="1dp" />
    </RelativeLayout>


</RelativeLayout>
