<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allback">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/bottom"
        android:background="#390062"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/back"
        android:id="@+id/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/infoo"
        android:id="@+id/about"
        android:onClick="AboutInfo"
        android:layout_gravity="right"
        android:paddingRight="30dp"
        android:paddingBottom="35dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/scrollView"
        android:layout_marginTop="15dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:fillViewport="false"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:scrollbars="none"
        android:scrollbarStyle="insideOverlay"
        android:layout_above="@+id/bottom"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/about">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="#5054ffeb">

                <ImageButton
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:id="@+id/weather"
                    android:background="@drawable/weather"
                    android:contentDescription="@string/go_to_weather"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Weather"
                    android:id="@+id/textView"
                    android:layout_gravity="left|center"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="#50545fff">

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/tools"
                    android:background="@drawable/tools"
                    android:contentDescription="@string/go_to_tools"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/plant"
                    android:layout_margin="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tools"
                    android:id="@+id/textView2"
                    android:layout_gravity="left|center"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="#5054ffeb">

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/plant"
                    android:background="@drawable/plant"
                    android:contentDescription="@string/go_to_plant"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Steps to Plant"
                    android:id="@+id/textView3"
                    android:layout_gravity="left|center"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="#50545fff">

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/nutriinfo"
                    android:background="@drawable/nutriinfo"
                    android:contentDescription="@string/go_to_nutriinfo"
                    android:layout_alignTop="@+id/weather"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nutrition Chart"
                    android:id="@+id/textView4"
                    android:layout_gravity="left|center"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="GUIDE"
        android:id="@+id/textView5"
        android:textStyle="bold"
        android:textSize="25dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="#000000"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

</RelativeLayout>
